# app/controllers/companyController.js
@@ -4,7 +4,7 @@ var User = require('../models/user');
 var Company = require('../models/company');
 
 //GET - Return all company in the DB
-exports.findAllCompanys = function(req, res) {
+exports.findAllCompanys = function (req, res) {
     var token = req.headers.authorization;
     // verifies secret and checks exp
     jwt.verify(token, config.jwt.secret, function(err, decoded) {
@@ -27,7 +27,7 @@ exports.findAllCompanys = function(req, res) {
 };
 
 //GET - Return a company with specified ID
-exports.findCompanyById = function(req, res) {
+exports.findCompanyById = function (req, res) {
     var token = req.headers.authorization;
     // verifies secret and checks exp
     jwt.verify(token, config.jwt.secret, function(err, decoded) {
@@ -55,7 +55,7 @@ exports.findCompanyById = function(req, res) {
 };
 
 //POST - Insert a new Company in the DB
-exports.addCompany = function(req, res) {
+exports.addCompany = function (req, res) {
 
     var token = req.headers.authorization;
     // verifies secret and checks exp
@@ -66,31 +66,40 @@ exports.addCompany = function(req, res) {
         } else {
             // if everything is good, save to request for use in other routes
             req.decoded = decoded;
-            var company = new Company ({
-                email: req.body.email,
-                name: req.body.name,
-                phone: req.body.lastname,
-                businessName: req.body.businessName,
-                rut: req.body.rut,
-                entry: req.body.entry,
-                businessTurn: req.body.businessTurn,
-                region: req.body.region,
-                city: req.body.city,
-                location: req.body.location,
-                flag: req.body.flag,
-                recomendation: req.body.recomendation
-            });
 
-            company.save(function(err, c) {
-                if(err) res.send({ code: 1, desc: err.message});
-                res.send(c);
+            encrypt.cryptPassword(req.body.password, function (err, hash) {
+                if (!err && hash) {
+                    var password =  hash;
+                    var company = new Company ({
+                        email: req.body.email,
+                        password: password,
+                        name: req.body.name,
+                        phone: req.body.lastname,
+                        businessName: req.body.businessName,
+                        rut: req.body.rut,
+                        entry: req.body.entry,
+                        businessTurn: req.body.businessTurn,
+                        region: req.body.region,
+                        city: req.body.city,
+                        location: req.body.location,
+                        flag: req.body.flag,
+                        recomendation: req.body.recomendation
+                    });
+
+                    company.save(function(err, c) {
+                        if(err) res.send({ code: 1, desc: err.message});
+                        res.send(c);
+                    });
+                } else {
+                    res.send({ _id: 3, descripcion: 'Error encrypt password'});
+                }
             });
         }
     });
 };
 
 //PUT - Update a register already exists
-exports.updateCompany = function(req, res) {
+exports.updateCompany = function (req, res) {
     
     var email = req.body.email || '';
     var name = req.body.name || '';
@@ -144,7 +153,7 @@ exports.updateCompany = function(req, res) {
 };
 
 //DELETE - Delete a Company with specified ID
-exports.deleteCompany = function(req, res) {
+exports.deleteCompany = function (req, res) {
 
     var token = req.headers.authorization;
     // verifies secret and checks exp
@@ -172,4 +181,51 @@ exports.deleteCompany = function(req, res) {
             }
         }
     });
+};
+
+
+// POST - Login company
+exports.companyLogin = function (req, res) {
+            
+    var body = req.body;
+    var email = body.email;
+    var password = body.password;
+
+    var companyId = req.params.id || '';
+    if (companyId != '') {
+        Company.findById(companyId, function (err, company) {
+            if (!err && company) {
+                if (company.password != null) {
+                    encrypt.comparePassword(password, company.password, function (err, isPasswordMatch) {
+                        if (!err && isPasswordMatch) {
+                            var comp = {
+                                id: companyId,
+                                email: company.email
+                            }
+                            var token = jwt.sign(comp, config.jwt.secret, {
+                              expiresIn: '1d' // expires in 24 hours
+                            });
+                            company.token = token;
+                            company.save(function (err, c) {
+                                if (!err) {
+                                    res.send(c);
+                                } else {
+                                    res.send({ _id: 0, descripcion: 'Token not save'});
+                                    console.log('ERROR: ' + err);
+                                }
+                            });
+                        } else {
+                            res.send({ _id: 0, descripcion: 'Incorrect password'});
+                        }
+                    });
+                } else {
+                    res.send({ _id: 1, descripcion: 'Company password not found'});
+                }
+            } else {
+                res.send({ _id: 2, descripcion: 'Company not exist'});
+            }
+        });
+    } else {
+        res.send({ code: 3, desc: 'Company ID is required'});
+    }
 };
